# Runrs

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  PKGBUILD  README.md  deploy.yml  install.sh  main.c  ste-key.gpg
docs/x86_64/: launcher-wayland-git-1.0.3.r16.b53eebc-1-x86_64.pkg.tar.zst  launcher-wayland-git-1.0.3.r21.f34b6d6-1-x86_64.pkg.tar.zst  launcher-wayland-git-1.0.3.r7.6691531-1-x86_64.pkg.tar.zst  ste-repo.db  ste-repo.db.sig  ste-repo.db.tar.zst  ste-repo.db.tar.zst.sig  ste-repo.files  ste-repo.files.sig  ste-repo.files.tar.zst  ste-repo.files.tar.zst.sig
docs/x86_64/launcher-wayland-git-1.0.3.r7.6691531-1/: desc  files
launcher/: config  packed-refs
remote_repo/: FETCH_HEAD
remote_repo/objects/pack/: pack-01262a98ffa2da187f8fae5bf15842dd427c9ce3.idx  pack-01262a98ffa2da187f8fae5bf15842dd427c9ce3.pack  pack-01262a98ffa2da187f8fae5bf15842dd427c9ce3.rev
remote_repo/refs/heads/: master
repo/: update-repo.sh
repo/arch/x86_64/: launcher.db  launcher.db.tar.zst.old  launcher.files  launcher.files.tar.zst.old
repo/x86_64/: launcher-wayland-git-1.0.3.r23.4e9df72-1-x86_64.pkg.tar.zst  ste-repo.db.tar.zst.sig  ste-repo.files.tar.zst  ste-repo.files.tar.zst.sig
src/: config.cpp  config.h  desktop.cpp  desktop.h  icons.cpp  icons.h  launch.cpp  launch.h  launch.rs  main.cpp  main.rs  metrics.cpp  metrics.h  theme.cpp  theme.h  theme.rs  toml.h  window.cpp  window.h
x86_64/: launcher-wayland-git-1.0.3.r19.371ddda-1-x86_64.pkg.tar.zst  ste-repo.db  ste-repo.files  ste-repo.files.sig  ste-repo.files.tar.zst.sig
